--- a/UBI/14/Dockerfile.multiarch
+++ b/UBI/14/Dockerfile.multiarch
@@ -18,6 +18,7 @@ RUN --mount=type=secret,id=cs_token \
 	ARCH="${TARGETARCH}" ; \
 	base_url="https://download.postgresql.org/pub/repos/yum/reporpms" ; \
 	pg_failover_slots_pkg="pg_failover_slots_14" ; \
+	pg_audit_pkg="pgaudit16_14" ; \
 	case $ARCH in \
 			amd64) \
 					yum -y install "${base_url}/EL-8-x86_64/pgdg-redhat-repo-latest.noarch.rpm" ; \
@@ -27,10 +28,14 @@ RUN --mount=type=secret,id=cs_token \
 					curl -u token:$(cat /run/secrets/cs_token) -1sLf https://downloads.enterprisedb.com/basic/enterprise/setup.rpm.sh | bash ;; \
 			ppc64le) \
 					curl -u token:$(cat /run/secrets/cs_token) -1sLf https://downloads.enterprisedb.com/basic/enterprise/setup.rpm.sh | bash ; \
-					pg_failover_slots_pkg="edb-pg14-pg-failover-slots1" ;; \
+					pg_failover_slots_pkg="edb-pg14-pg-failover-slots1" ; \
+					pg_audit_pkg="edb-pg14-pgaudit1" ; \
+					if [ "$PG_MAJOR" -gt "15" ]; then pg_audit_pkg="edb-pg14-pgaudit"; fi ;; \
 			s390x) \
 					curl -u token:$(cat /run/secrets/cs_token) -1sLf https://downloads.enterprisedb.com/basic/edb/setup.rpm.sh | bash ; \
-					pg_failover_slots_pkg="edb-pg14-pg-failover-slots1" ;; \
+					pg_failover_slots_pkg="edb-pg14-pg-failover-slots1" ; \
+					pg_audit_pkg="edb-pg14-pgaudit1" ; \
+					if [ "$PG_MAJOR" -gt "15" ]; then pg_audit_pkg="edb-pg14-pgaudit"; fi ;; \
 			*) \
 					exit 1 ;; \
 	esac ; \
@@ -38,26 +43,14 @@ RUN --mount=type=secret,id=cs_token \
 	yum -y reinstall glibc-common ; \
 	rm -fr /etc/rpm/macros.image-language-conf ; \
 	yum -y install hostname rsync tar gettext bind-utils nss_wrapper glibc-locale-source glibc-langpack-en glibc-all-langpacks ; \
-	case 14 in \
-            11|12|13|14) \
-	                yum -y --setopt=tsflags=nodocs install \
-	                    postgresql14-14.10 \
-	                    postgresql14-contrib-14.10 \
-	                    postgresql14-server-14.10 \
-	                    postgresql14-libs-14.10 \
-	                    pgaudit16_14 \
-	                    "$pg_failover_slots_pkg" \
-	                    ;; \
-            15|16) \
-                    yum -y --setopt=tsflags=nodocs install \
-                        postgresql14-14.10 \
-                        postgresql14-contrib-14.10 \
-                        postgresql14-server-14.10 \
-                        postgresql14-libs-14.10 \
-	                    ;; \
-            *) \
-                    exit 1 ;; \
-    esac ; \
+	yum -y --setopt=tsflags=nodocs install \
+			postgresql14-14.10 \
+			postgresql14-contrib-14.10 \
+			postgresql14-server-14.10 \
+			postgresql14-libs-14.10 \
+			"pg_audit_pkg" \
+			"$pg_failover_slots_pkg" \
+	; \
 	rm -fr /etc/yum.repos.d/enterprisedb-*.repo ; \
 	rm -fr /tmp/* ; \
 	yum -y clean all --enablerepo='*'
