--- a/UBI/12/Dockerfile.postgis
+++ b/UBI/12/Dockerfile.postgis
@@ -17,11 +17,14 @@ ARG TARGETARCH
 RUN set -xe ; \
 	ARCH="${TARGETARCH}" ; \
 	base_url="https://download.postgresql.org/pub/repos/yum/reporpms" ; \
+	pg_audit_pkg="pgaudit14_12" ; \
 	case $ARCH in \
 			amd64) \
-				yum -y install "${base_url}/EL-8-x86_64/pgdg-redhat-repo-latest.noarch.rpm" ;; \
+				yum -y install "${base_url}/EL-8-x86_64/pgdg-redhat-repo-latest.noarch.rpm" ; \
+				if [ "12" -gt "15" ]; then pg_audit_pkg="pgaudit_12"; fi ;; \
 			arm64) \
-				yum -y install "${base_url}/EL-8-aarch64/pgdg-redhat-repo-latest.noarch.rpm" ;; \
+				yum -y install "${base_url}/EL-8-aarch64/pgdg-redhat-repo-latest.noarch.rpm" ; \
+				if [ "12" -gt "15" ]; then pg_audit_pkg="pgaudit_12"; fi ;; \
 			*) \
 					exit 1 ;; \
 	esac ; \
@@ -34,7 +37,7 @@ RUN set -xe ; \
 		postgresql12-server-12.17 \
 		postgresql12-libs-12.17 \
 		pg_failover_slots_12 \
-		pgaudit14_12 \
+		"$pg_audit_pkg" \
 	; \
 	rm -fr /tmp/* ; \
 	yum -y clean all --enablerepo='*'
