--- a/UBI/13/Dockerfile.postgis-multilang
+++ b/UBI/13/Dockerfile.postgis-multilang
@@ -17,11 +17,14 @@ ARG TARGETARCH
 RUN set -xe ; \
 	ARCH="${TARGETARCH}" ; \
 	base_url="https://download.postgresql.org/pub/repos/yum/reporpms" ; \
+	pg_audit_pkg="pgaudit15_13" ; \
 	case $ARCH in \
 			amd64) \
-				yum -y install "${base_url}/EL-8-x86_64/pgdg-redhat-repo-latest.noarch.rpm" ;; \
+				yum -y install "${base_url}/EL-8-x86_64/pgdg-redhat-repo-latest.noarch.rpm" ; \
+				if [ "13" -gt "15" ]; then pg_audit_pkg="pgaudit_13"; fi ;; \
 			arm64) \
-				yum -y install "${base_url}/EL-8-aarch64/pgdg-redhat-repo-latest.noarch.rpm" ;; \
+				yum -y install "${base_url}/EL-8-aarch64/pgdg-redhat-repo-latest.noarch.rpm" ; \
+				if [ "13" -gt "15" ]; then pg_audit_pkg="pgaudit_13"; fi ;; \
 			*) \
 					exit 1 ;; \
 	esac ; \
@@ -35,7 +38,7 @@ RUN set -xe ; \
 		postgresql13-server-13.13 \
 		postgresql13-libs-13.13 \
 		pg_failover_slots_13 \
-		pgaudit15_13 \
+		"$pg_audit_pkg" \
 	; \
 	rm -fr /tmp/* ; \
 	yum -y clean all --enablerepo='*'
