--- a/UBI/14/Dockerfile.multiarch
+++ b/UBI/14/Dockerfile.multiarch
@@ -22,20 +22,22 @@ RUN --mount=type=secret,id=cs_token \
 	case $ARCH in \
 			amd64) \
 					yum -y install "${base_url}/EL-8-x86_64/pgdg-redhat-repo-latest.noarch.rpm" ; \
-					curl -u token:$(cat /run/secrets/cs_token) -1sLf https://downloads.enterprisedb.com/basic/enterprise/setup.rpm.sh | bash ;; \
+					curl -u token:$(cat /run/secrets/cs_token) -1sLf https://downloads.enterprisedb.com/basic/enterprise/setup.rpm.sh | bash ; \
+					if [ "14" -gt "15" ]; then pg_audit_pkg="pgaudit_14"; fi ;; \
 			arm64) \
 					yum -y install "${base_url}/EL-8-aarch64/pgdg-redhat-repo-latest.noarch.rpm" ; \
-					curl -u token:$(cat /run/secrets/cs_token) -1sLf https://downloads.enterprisedb.com/basic/enterprise/setup.rpm.sh | bash ;; \
+					curl -u token:$(cat /run/secrets/cs_token) -1sLf https://downloads.enterprisedb.com/basic/enterprise/setup.rpm.sh | bash ; \
+					if [ "14" -gt "15" ]; then pg_audit_pkg="pgaudit_14"; fi ;; \
 			ppc64le) \
 					curl -u token:$(cat /run/secrets/cs_token) -1sLf https://downloads.enterprisedb.com/basic/enterprise/setup.rpm.sh | bash ; \
 					pg_failover_slots_pkg="edb-pg14-pg-failover-slots1" ; \
 					pg_audit_pkg="edb-pg14-pgaudit1" ; \
-					if [ "$PG_MAJOR" -gt "15" ]; then pg_audit_pkg="edb-pg14-pgaudit"; fi ;; \
+					if [ "14" -gt "15" ]; then pg_audit_pkg="edb-pg14-pgaudit14"; fi ;; \
 			s390x) \
 					curl -u token:$(cat /run/secrets/cs_token) -1sLf https://downloads.enterprisedb.com/basic/edb/setup.rpm.sh | bash ; \
 					pg_failover_slots_pkg="edb-pg14-pg-failover-slots1" ; \
 					pg_audit_pkg="edb-pg14-pgaudit1" ; \
-					if [ "$PG_MAJOR" -gt "15" ]; then pg_audit_pkg="edb-pg14-pgaudit"; fi ;; \
+					if [ "14" -gt "15" ]; then pg_audit_pkg="edb-pg14-pgaudit14"; fi ;; \
 			*) \
 					exit 1 ;; \
 	esac ; \
@@ -48,7 +50,7 @@ RUN --mount=type=secret,id=cs_token \
 			postgresql14-contrib-14.10 \
 			postgresql14-server-14.10 \
 			postgresql14-libs-14.10 \
-			"pg_audit_pkg" \
+			"$pg_audit_pkg" \
 			"$pg_failover_slots_pkg" \
 	; \
 	rm -fr /etc/yum.repos.d/enterprisedb-*.repo ; \
