--- a/UBI/Dockerfile-multiarch.template
+++ b/UBI/Dockerfile-multiarch.template
@@ -22,20 +22,22 @@ RUN --mount=type=secret,id=cs_token \
 	case $ARCH in \
 			amd64) \
 					yum -y install "${base_url}/EL-8-x86_64/pgdg-redhat-repo-latest.noarch.rpm" ; \
-					curl -u token:$(cat /run/secrets/cs_token) -1sLf https://downloads.enterprisedb.com/basic/enterprise/setup.rpm.sh | bash ;; \
+					curl -u token:$(cat /run/secrets/cs_token) -1sLf https://downloads.enterprisedb.com/basic/enterprise/setup.rpm.sh | bash ; \
+					if [ "%%PG_MAJOR%%" -gt "15" ]; then pg_audit_pkg="pgaudit_%%PG_MAJOR%%"; fi ;; \
 			arm64) \
 					yum -y install "${base_url}/EL-8-aarch64/pgdg-redhat-repo-latest.noarch.rpm" ; \
-					curl -u token:$(cat /run/secrets/cs_token) -1sLf https://downloads.enterprisedb.com/basic/enterprise/setup.rpm.sh | bash ;; \
+					curl -u token:$(cat /run/secrets/cs_token) -1sLf https://downloads.enterprisedb.com/basic/enterprise/setup.rpm.sh | bash ; \
+					if [ "%%PG_MAJOR%%" -gt "15" ]; then pg_audit_pkg="pgaudit_%%PG_MAJOR%%"; fi ;; \
 			ppc64le) \
 					curl -u token:$(cat /run/secrets/cs_token) -1sLf https://downloads.enterprisedb.com/basic/enterprise/setup.rpm.sh | bash ; \
 					pg_failover_slots_pkg="edb-pg%%PG_MAJOR%%-pg-failover-slots1" ; \
 					pg_audit_pkg="edb-pg%%PG_MAJOR%%-pgaudit1" ; \
-					if [ "$PG_MAJOR" -gt "15" ]; then pg_audit_pkg="edb-pg%%PG_MAJOR%%-pgaudit"; fi ;; \
+					if [ "%%PG_MAJOR%%" -gt "15" ]; then pg_audit_pkg="edb-pg%%PG_MAJOR%%-pgaudit%%PG_MAJOR%%"; fi ;; \
 			s390x) \
 					curl -u token:$(cat /run/secrets/cs_token) -1sLf https://downloads.enterprisedb.com/basic/edb/setup.rpm.sh | bash ; \
 					pg_failover_slots_pkg="edb-pg%%PG_MAJOR%%-pg-failover-slots1" ; \
 					pg_audit_pkg="edb-pg%%PG_MAJOR%%-pgaudit1" ; \
-					if [ "$PG_MAJOR" -gt "15" ]; then pg_audit_pkg="edb-pg%%PG_MAJOR%%-pgaudit"; fi ;; \
+					if [ "%%PG_MAJOR%%" -gt "15" ]; then pg_audit_pkg="edb-pg%%PG_MAJOR%%-pgaudit%%PG_MAJOR%%"; fi ;; \
 			*) \
 					exit 1 ;; \
 	esac ; \
@@ -48,7 +50,7 @@ RUN --mount=type=secret,id=cs_token \
 			postgresql%%PG_MAJOR%%-contrib-%%POSTGRES_VERSION%% \
 			postgresql%%PG_MAJOR%%-server-%%POSTGRES_VERSION%% \
 			postgresql%%PG_MAJOR%%-libs-%%POSTGRES_VERSION%% \
-			"pg_audit_pkg" \
+			"$pg_audit_pkg" \
 			"$pg_failover_slots_pkg" \
 	; \
 	rm -fr /etc/yum.repos.d/enterprisedb-*.repo ; \
