feat: adding in ubi9 operand images (#172)
* feat: adding ubi9 image builds

Signed-off-by: John Long <john.long@enterprisedb.com>

* chore: review

Signed-off-by: Niccolò Fei <niccolo.fei@enterprisedb.com>

* chore: add new version files

Signed-off-by: Niccolò Fei <niccolo.fei@enterprisedb.com>

* fix: adjust UBI9 tags

Signed-off-by: Niccolò Fei <niccolo.fei@enterprisedb.com>

* chore: automatic update

Signed-off-by: Niccolò Fei <niccolo.fei@enterprisedb.com>

---------

Signed-off-by: John Long <john.long@enterprisedb.com>
Signed-off-by: Niccolò Fei <niccolo.fei@enterprisedb.com>
Co-authored-by: Niccolò Fei <niccolo.fei@enterprisedb.com>

--- a/UBI/15/Dockerfile.multiarch.ubi8
+++ b/UBI/15/Dockerfile.multiarch.ubi8
@@ -1,14 +1,14 @@
 # vim:set ft=dockerfile:
-FROM quay.io/enterprisedb/edb-ubi:%%UBI_VERSION%%
+FROM quay.io/enterprisedb/edb-ubi:8.9-1107.1705420509
 
 # Do not split the description, otherwise we will see a blank space in the labels
 LABEL name="PostgreSQL Container Images" \
       vendor="EnterpriseDB" \
       url="https://www.enterprisedb.com/" \
-      version="%%POSTGRES_VERSION%%" \
-      release="%%IMAGE_RELEASE_VERSION%%" \
+      version="15.5" \
+      release="1" \
       summary="PostgreSQL Container images." \
-      description="This Docker image contains PostgreSQL and Barman Cloud based on RedHat Universal Base Images (UBI) %%UBI_MAJOR_VERSION%%."
+      description="This Docker image contains PostgreSQL and Barman Cloud based on RedHat Universal Base Images (UBI) 8."
 
 COPY root/ /
 
@@ -17,27 +17,27 @@ RUN --mount=type=secret,id=cs_token \
 	set -xe ; \
 	ARCH="${TARGETARCH}" ; \
 	base_url="https://download.postgresql.org/pub/repos/yum/reporpms" ; \
-	pg_failover_slots_pkg="pg_failover_slots_%%PG_MAJOR%%" ; \
-	pg_audit_pkg="pgaudit%%PGAUDIT_VERSION%%_%%PG_MAJOR%%" ; \
+	pg_failover_slots_pkg="pg_failover_slots_15" ; \
+	pg_audit_pkg="pgaudit17_15" ; \
 	case $ARCH in \
 			amd64) \
-					yum -y install "${base_url}/EL-%%UBI_MAJOR_VERSION%%-x86_64/pgdg-redhat-repo-latest.noarch.rpm" ; \
+					yum -y install "${base_url}/EL-8-x86_64/pgdg-redhat-repo-latest.noarch.rpm" ; \
 					curl -u token:$(cat /run/secrets/cs_token) -1sLf https://downloads.enterprisedb.com/basic/enterprise/setup.rpm.sh | bash ; \
-					if [ "%%PG_MAJOR%%" -gt "15" ]; then pg_audit_pkg="pgaudit_%%PG_MAJOR%%"; fi ;; \
+					if [ "15" -gt "15" ]; then pg_audit_pkg="pgaudit_15"; fi ;; \
 			arm64) \
-					yum -y install "${base_url}/EL-%%UBI_MAJOR_VERSION%%-aarch64/pgdg-redhat-repo-latest.noarch.rpm" ; \
+					yum -y install "${base_url}/EL-8-aarch64/pgdg-redhat-repo-latest.noarch.rpm" ; \
 					curl -u token:$(cat /run/secrets/cs_token) -1sLf https://downloads.enterprisedb.com/basic/enterprise/setup.rpm.sh | bash ; \
-					if [ "%%PG_MAJOR%%" -gt "15" ]; then pg_audit_pkg="pgaudit_%%PG_MAJOR%%"; fi ;; \
+					if [ "15" -gt "15" ]; then pg_audit_pkg="pgaudit_15"; fi ;; \
 			ppc64le) \
 					curl -u token:$(cat /run/secrets/cs_token) -1sLf https://downloads.enterprisedb.com/basic/enterprise/setup.rpm.sh | bash ; \
-					pg_failover_slots_pkg="edb-pg%%PG_MAJOR%%-pg-failover-slots1" ; \
-					pg_audit_pkg="edb-pg%%PG_MAJOR%%-pgaudit1" ; \
-					if [ "%%PG_MAJOR%%" -gt "15" ]; then pg_audit_pkg="edb-pg%%PG_MAJOR%%-pgaudit%%PG_MAJOR%%"; fi ;; \
+					pg_failover_slots_pkg="edb-pg15-pg-failover-slots1" ; \
+					pg_audit_pkg="edb-pg15-pgaudit1" ; \
+					if [ "15" -gt "15" ]; then pg_audit_pkg="edb-pg15-pgaudit15"; fi ;; \
 			s390x) \
 					curl -u token:$(cat /run/secrets/cs_token) -1sLf https://downloads.enterprisedb.com/basic/edb/setup.rpm.sh | bash ; \
-					pg_failover_slots_pkg="edb-pg%%PG_MAJOR%%-pg-failover-slots1" ; \
-					pg_audit_pkg="edb-pg%%PG_MAJOR%%-pgaudit1" ; \
-					if [ "%%PG_MAJOR%%" -gt "15" ]; then pg_audit_pkg="edb-pg%%PG_MAJOR%%-pgaudit%%PG_MAJOR%%"; fi ;; \
+					pg_failover_slots_pkg="edb-pg15-pg-failover-slots1" ; \
+					pg_audit_pkg="edb-pg15-pgaudit1" ; \
+					if [ "15" -gt "15" ]; then pg_audit_pkg="edb-pg15-pgaudit15"; fi ;; \
 			*) \
 					exit 1 ;; \
 	esac ; \
@@ -46,10 +46,10 @@ RUN --mount=type=secret,id=cs_token \
 	rm -fr /etc/rpm/macros.image-language-conf ; \
 	yum -y install hostname rsync tar gettext bind-utils nss_wrapper glibc-locale-source glibc-langpack-en glibc-all-langpacks ; \
 	yum -y --setopt=tsflags=nodocs install \
-			postgresql%%PG_MAJOR%%-%%POSTGRES_VERSION%% \
-			postgresql%%PG_MAJOR%%-contrib-%%POSTGRES_VERSION%% \
-			postgresql%%PG_MAJOR%%-server-%%POSTGRES_VERSION%% \
-			postgresql%%PG_MAJOR%%-libs-%%POSTGRES_VERSION%% \
+			postgresql15-15.5 \
+			postgresql15-contrib-15.5 \
+			postgresql15-server-15.5 \
+			postgresql15-libs-15.5 \
 			"$pg_audit_pkg" \
 			"$pg_failover_slots_pkg" \
 	; \
@@ -66,8 +66,8 @@ RUN set -xe ; \
 
 # make the sample config easier to munge (and "correct by default")
 RUN set -eux; \
-	sed -ri "s!^#?(listen_addresses)\s*=\s*\S+.*!\1 = '*'!" /usr/pgsql-%%PG_MAJOR%%/share/postgresql.conf.sample; \
-	grep -F "listen_addresses = '*'" /usr/pgsql-%%PG_MAJOR%%/share/postgresql.conf.sample
+	sed -ri "s!^#?(listen_addresses)\s*=\s*\S+.*!\1 = '*'!" /usr/pgsql-15/share/postgresql.conf.sample; \
+	grep -F "listen_addresses = '*'" /usr/pgsql-15/share/postgresql.conf.sample
 
 # prepare the environment and make sure postgres user has the correct UID
 RUN set -xeu ; \
@@ -77,7 +77,7 @@ RUN set -xeu ; \
 	chown postgres:postgres /var/run/postgresql ; \
 	chmod 0755 /var/run/postgresql
 
-ENV PATH $PATH:/usr/pgsql-%%PG_MAJOR%%/bin
+ENV PATH $PATH:/usr/pgsql-15/bin
 
 RUN mkdir -p /var/run/postgresql && chown -R postgres:postgres /var/run/postgresql && chmod 2777 /var/run/postgresql
 
